update hero styles on mobile

--- a/index.html
+++ b/index.html
@@ -147,15 +147,14 @@ overflow:hidden;
             <header class="top container">
                <nav class="h5">
                   <a class="link" href="#projects">Projects</a>
-                  <a class="link" href="#services">Services</a>
                   <a class="link" href="#about">About</a>
+                  <a class="link" href="https://github.com/MichaelGombos">Github</a>
+                  <a class="link" href="./assets/documents/GombosResume.pdf">Resume</a>
                </nav>
             </header>
             <div class="bottom container">
                <h1 class="h1">Michael <span class="inline-block"><span class="motif">G</span>ombos</span></h1>
                <h2 class="text-light h3 ">Your Freindly Neighborhood Web Designer</h2>
-               <a href="https://github.com/MichaelGombos" class="button hvr-grow">Github</a>
-               <a href="./assets/documents/GombosResume.pdf" class="button hvr-grow bg-secondary">Resume</a>
             </div>
          </div>
          <!--canvas is generated here-->
@@ -210,32 +209,6 @@ This was one of my first real projects and taught me a lot about extracting cont
                </div>
             </div>
          </div>
-         <div id="services">
-            <h2 class="h2 text-primary"><span class="motif">M</span>y Services</h2>
-            <div class="service">
-              <h3>Page Speed Optimization</h3>
-              <p>Whether it's a site built with a CMS like wordpress, or a vanilla html site, The speed of your website drastically impacts how google views your site, as well as the natural bounce rate as users wait for content. This is crucial in our mobile world when users with lower end devices look to access your site.
-                </p>
-            </div>
-            
-            <div class="service">
-              <h3>Design</h3>
-              <p>Design impacts how your audience views your brand. Plain and simple, and quite literal. Good web design will get your audience looking where you want them to. Your site's design should allow your audience to think as little as possible.
-
-                </p>
-            </div>
-            <div class="service">
-              <h3>Accessibility</h3>
-              <p>Accessibility is at the forefront of my mind when developing a website. This web was created to be used widely around the world. It's for Everybody! This is why I focus on creating a website that anyone (no matter their ability) can navigate and interact with.
-
-                </p>
-            </div>
-            <div class="service">
-              <h3>SEO</h3>
-              <p>Search Engine Optimization allows your site to rank higher on the search results page. It takes a combination of optimized Keywords, Content, Links, Web Traffic, and Page Stats like load time and bounce rate to improve your ranking. 
-</p>
-            </div>
-         </div>
          <div id="about">
             <h2 class="h2 text-primary"><span class="motif">A</span>bout</h2>
             <div class="column row-desktop">
@@ -259,7 +232,6 @@ This was one of my first real projects and taught me a lot about extracting cont
                   <a class="link" href="#hero">Back To Top</a>
                   <a class="link" href="./assets/documents/GombosResume.pdf">Resume</a>
                   <a class="link" href="#projects">Projects</a>
-                  <a class="link" href="#services">Services</a>
                   <a class="link" href="#about">About</a>
                   
                   <p class="bold">Info:</p>
