--- a/index.html
+++ b/index.html
@@ -163,6 +163,31 @@ overflow:hidden;
          <div id="projects">
             <h2 class="text-primary h2"><span class="motif">P</span>rojects</h2>
             <div class="project">
+               <h3 class="h4 bold">www.theartofdrift.com</h3>
+               <p>The Art Of Drift is a racing game built using JavaScript and the React library. This game offers 13 challenging maps, each with 4 medals to earn.
+
+                  <br/><br/>
+
+                  It includes a map maker feature as well as a public leaderboard that utilizes Google Firebase to store and display players' scores.
+
+                  <br/><br/>
+
+                  This project was a great opportunity for me to develop my skills in JavaScript, React, and data storage solutions.
+               </p>
+               <img alt="Gif of the art of drift video game project"width="612" height="433" class="preview" src="https://github.com/MichaelGombos/browser-driving-demo/blob/main/public/title.gif?raw=true">
+               <nav>
+                  <a href="https://www.youtube.com/watch?v=n_ER_f3MT90" class="button bg-youtube">Watch Showcase <img width="37" height="16" alt="React icon" src="./assets/icons/icon_youtube.svg"></a>
+                  <a href="https://theartofdrift.com/" class="bg-secondary button">Play</a>
+                  <a href="https://github.com/MichaelGombos/browser-driving-demo" class="button">Github</a>
+               </nav>
+               <div class="tech">
+                  <img width="47" height="41" alt="React icon" src="./assets/icons/icon_react.svg">
+                  <img width="37" height="41" alt="CSS icon" src="./assets/icons/icon_css.svg">
+                  <img width="37" height="41" alt="HTML icon" src="./assets/icons/icon_html.svg">
+                  <img width="42" height="41" alt="JS icon" src="./assets/icons/icon_js.svg">
+               </div>
+            </div>
+            <div class="project">
                <h3 class="h4 bold">Carrot.com Css Tab Extender</h3>
                <p>While working at SEO for real estate investors, I spent a lot of my time inside of the carrot editor tweaking and designing web pages. The carrot.com design tab offers a CSS editor much like WordPress, but I found the default size to be too small </p>
                <img alt="Google Play Store preview of Css Tab Extender Project" width="615" height="305" class="preview" src="./assets/images/carrot-project.webp">
@@ -177,27 +202,12 @@ overflow:hidden;
                </div>
             </div>
             <div class="project">
-               <h3 class="h4 bold">Sorting Algorithm Visualizer</h3>
-               <p>This is a react application build to provide a visual for how data is moved inside of arrays that are ran throught common sorting algorithms.  </p>
-               <img alt="Website screenshot of the Sorting Algorithm Visualizer project"width="612" height="433" class="preview" src="./assets/images/sorter-project.webp">
-               <nav>
-                  <a href="https://sparkling-tiramisu-b58a5d.netlify.app/" class="button bg-secondary">View Live</a>
-                  <a href="https://github.com/MichaelGombos/sorting-algorithm-visualizer" class="button">Github</a>
-               </nav>
-               <div class="tech">
-                  <img width="47" height="41" alt="React icon" src="./assets/icons/icon_react.svg">
-                  <img width="37" height="41" alt="CSS icon" src="./assets/icons/icon_css.svg">
-                  <img width="37" height="41" alt="HTML icon" src="./assets/icons/icon_html.svg">
-                  <img width="42" height="41" alt="JS icon" src="./assets/icons/icon_js.svg">
-               </div>
-            </div>
-            <div class="project">
                <h3 class="h4 bold">KbKaty.com</h3>
                <p>KbKaty is a Texas contracting company that opened in 2018. I created their first website working closely with the owner to decide on a design
 
-<br/><br/>
-This was one of my first real projects and taught me a lot about extracting content from clients.</p>
-               <img alt="website screenshot of kbkaty.com"width="611" height="300" class="preview" src="./assets/images/kb-project.webp">
+               <br/><br/>
+               This project taught me a lot about working with the client to write content, gather imagery, and collaborite to create and improve on a design.</p>
+               <img alt="website screenshot of kbkaty.com" class="preview" src="./assets/images/kbkaty-hero.gif">
                <nav>
                   <a href="https://www.kbkaty.com/" class="button bg-secondary">View Live</a>
                </nav>
