update The Art Of Drift project details

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ overflow:hidden;
             <h2 class="text-primary h2"><span class="motif">P</span>rojects</h2>
             <div class="project">
                <h3 class="h4 bold">www.theartofdrift.com</h3>
-               <p>The Art Of Drift is a racing game built using JavaScript and the React library. This game offers 13 challenging maps, each with 4 medals to earn.
+               <p>The Art Of Drift is a racing game built using JavaScript and the React library. This game offers 13 maps, each with 4 medals to earn.
 
                   <br/><br/>
 
@@ -174,9 +174,9 @@ overflow:hidden;
 
                   This project was a great opportunity for me to develop my skills in JavaScript, React, and data storage solutions.
                </p>
-               <img alt="Gif of the art of drift video game project"width="612" height="433" class="preview" src="https://github.com/MichaelGombos/browser-driving-demo/blob/main/public/title.gif?raw=true">
+               <img alt="Gif of the art of drift video game project"width="612" height="433" class="preview" src="./assets/images/TheArtOfDriftBetaDemoSlide.1.gif">
                <nav>
-                  <a href="https://www.youtube.com/watch?v=n_ER_f3MT90" class="button bg-youtube">Watch Showcase <img width="37" height="16" alt="React icon" src="./assets/icons/icon_youtube.svg"></a>
+                  <a href="https://www.youtube.com/watch?v=jf65ZTepkio" class="button bg-youtube">Trailer <img width="37" height="16" alt="React icon" src="./assets/icons/icon_youtube.svg"></a>
                   <a href="https://theartofdrift.com/" class="bg-secondary button">Play</a>
                   <a href="https://github.com/MichaelGombos/browser-driving-demo" class="button">Github</a>
                </nav>
