Update Portrait and Project info

--- a/index.html
+++ b/index.html
@@ -163,16 +163,26 @@ overflow:hidden;
          <div id="projects">
             <h2 class="text-primary h2"><span class="motif">P</span>rojects</h2>
             <div class="project">
+               <h3 class="h4 bold">Carrot.com Css Tab Extender</h3>
+               <p>While working at SEO for real estate investors, I spent a lot of my time inside of the carrot editor tweaking and designing web pages. <br/><br/>  The carrot.com design tab offers a CSS editor similar to WordPress, but the default size is too small, and can be an inconvienance to developers and designers. <br/><br/> I created a chrome extension to extend the height of the CSS editor. </p>
+               <img alt="Google Play Store preview of Css Tab Extender Project" width="615" height="305" class="preview" src="./assets/images/carrot-project.webp">
+               <nav>
+                  <a href="https://chrome.google.com/webstore/detail/carrot-css-tab-extender/lgkdfebkigaodhjhbceehdilafpdallo?hl=en"class="button bg-secondary">Web Store</a>
+                  <a href="https://github.com/MichaelGombos/Carrot-CSS-Tab-Extender" class="button">Github</a>
+               </nav>
+               <div class="tech">
+                  <img width="37" height="41" alt="CSS icon" src="./assets/icons/icon_css.svg">
+                  <img width="37" height="41" alt="HTML icon" src="./assets/icons/icon_html.svg">
+                  <img width="42" height="41" alt="JS icon"  src="./assets/icons/icon_js.svg">
+               </div>
+            </div>
+            <div class="project">
                <h3 class="h4 bold">www.theartofdrift.com</h3>
-               <p>The Art Of Drift is a racing game built using JavaScript and the React library. This game offers 13 maps, each with 4 medals to earn.
-
+               <p>The Art Of Drift is a racing game built using JavaScript and the React library.
                   <br/><br/>
-
-                  It includes a map maker feature as well as a public leaderboard that utilizes Google Firebase to store and display players' scores.
-
+                  This project includes a backend to store player information with google firebase.
                   <br/><br/>
-
-                  This project was a great opportunity for me to develop my skills in JavaScript, React, and data storage solutions.
+                  This game is rendered using React and Pixi.js.
                </p>
                <img alt="Gif of the art of drift video game project"width="612" height="433" class="preview" src="./assets/images/TheArtOfDriftBetaDemoSlide.1.gif">
                <nav>
@@ -187,20 +197,7 @@ overflow:hidden;
                   <img width="42" height="41" alt="JS icon" src="./assets/icons/icon_js.svg">
                </div>
             </div>
-            <div class="project">
-               <h3 class="h4 bold">Carrot.com Css Tab Extender</h3>
-               <p>While working at SEO for real estate investors, I spent a lot of my time inside of the carrot editor tweaking and designing web pages. The carrot.com design tab offers a CSS editor much like WordPress, but I found the default size to be too small </p>
-               <img alt="Google Play Store preview of Css Tab Extender Project" width="615" height="305" class="preview" src="./assets/images/carrot-project.webp">
-               <nav>
-                  <a href="https://chrome.google.com/webstore/detail/carrot-css-tab-extender/lgkdfebkigaodhjhbceehdilafpdallo?hl=en"class="button bg-secondary">Web Store</a>
-                  <a href="https://github.com/MichaelGombos/Carrot-CSS-Tab-Extender" class="button">Github</a>
-               </nav>
-               <div class="tech">
-                  <img width="37" height="41" alt="CSS icon" src="./assets/icons/icon_css.svg">
-                  <img width="37" height="41" alt="HTML icon" src="./assets/icons/icon_html.svg">
-                  <img width="42" height="41" alt="JS icon"  src="./assets/icons/icon_js.svg">
-               </div>
-            </div>
+
             <div class="project">
                <h3 class="h4 bold">KbKaty.com</h3>
                <p>KbKaty is a Texas contracting company that opened in 2018. I created their first website working closely with the owner to decide on a design
