update project oder

--- a/index.html
+++ b/index.html
@@ -193,31 +193,6 @@
           <h2 class="text-primary h2"><span class="motif">P</span>rojects</h2>
 
           <div class="project">
-            <h3 class="h4 bold">Indeed Web Scraper</h3>
-            <img
-              alt="Indeed web scraper project logo"
-              width="615"
-              height="305"
-              class="preview"
-              src="./assets/images/indeed-project.webp"
-              target="_blank"
-            />
-            <p>
-              This is a web scraper built to search for job postings on
-              indeed.com. <br /><br />
-              A dashboard is included to run reports on the gathered data.
-            </p>
-
-            <nav>
-              <a
-                href="https://github.com/MichaelGombos/automatic-indeed-applier"
-                class="button"
-                target="_blank"
-                >Github</a
-              >
-            </nav>
-          </div>
-          <div class="project">
             <h3 class="h4 bold">Quickbooks Automatic Error Remover</h3>
             <img
               alt="Quickbooks Automatic Error Remover project logo"
@@ -287,6 +262,38 @@
               >
             </nav>
           </div>
+          <div class="project">
+            <h3 class="h4 bold">Indeed bot</h3>
+            <img
+              alt="Indeed web scraper project logo"
+              width="615"
+              height="305"
+              class="preview"
+              src="./assets/images/indeed-project.webp"
+              target="_blank"
+            />
+            <p>
+              This is a web scraper built to automatically search and apply for
+              recent job posts on indeed.com.<br /><br />
+              This project contains a dashboard to control the webscraper, and a
+              server to handle storage.
+              <br /><br />
+              The web scraper has support for proxies, and is job board freindly
+              as the pace is throttled.
+              <br /><br />
+              This project was created for educational purposes only... I
+              promise.
+            </p>
+
+            <nav>
+              <a
+                href="https://github.com/MichaelGombos/automatic-indeed-applier"
+                class="button"
+                target="_blank"
+                >Github</a
+              >
+            </nav>
+          </div>
 
           <div class="project">
             <h3 class="h4 bold">Carrot.com Css Tab Extender</h3>
@@ -322,32 +329,14 @@
                 >View on chrome web store</a
               >
             </nav>
-            <div class="tech">
-              <img
-                width="37"
-                height="41"
-                alt="CSS icon"
-                src="./assets/icons/icon_css.svg"
-              />
-              <img
-                width="37"
-                height="41"
-                alt="HTML icon"
-                src="./assets/icons/icon_html.svg"
-              />
-              <img
-                width="42"
-                height="41"
-                alt="JS icon"
-                src="./assets/icons/icon_js.svg"
-              />
-            </div>
           </div>
         </div>
         <div id="about">
           <div class="column row-desktop">
-            <div class="col-3">
-              <h2 class="h2 text-primary"><span class="motif">A</span>bout</h2>
+            <div class="col-3-desktop column">
+              <h2 class="h2 text-primary">
+                <span class="motif">W</span>ho's this bloke?
+              </h2>
               <p>
                 I'm a part-time student at Houston Community College, currently
                 pursuing my Associate's degree in Computer Science.
@@ -358,7 +347,7 @@
                 military grade jet turbines, and lying about my hobbies.
               </p>
             </div>
-            <div class="col-3">
+            <div class="col-3-desktop column">
               <div class="portrait-image-align">
                 <div class="portrait-image-wrapper">
                   <img
