update resume and social links

--- a/index.html
+++ b/index.html
@@ -178,6 +178,12 @@
                 >Github</a
               >
               <a
+                href="https://www.linkedin.com/in/m1ch43l/"
+                class="button"
+                target="_blank"
+                >Linkedin</a
+              >
+              <a
                 href="./assets/documents/GombosResume.pdf"
                 class="button bg-secondary"
                 target="_blank"
@@ -205,15 +211,10 @@
             <p>
               While working at bill.com, there would be times where thousands of
               unnecessary errors would pop up for accounting software after data
-              has tried to be sent to and from bill.com. <br /><br />
-              An example of this would be when the books are closed and a list
-              item is merged incorrectly, causing errors on records that that
-              you don’t want to sync to your accounting system.
+              tries to sync to or from bill.com.
               <br /><br />
-              Unlike other cloud based accounting systems, the Quickbooks
-              desktop bill.com integration does not have built in support for
-              clearing errors in bulk. Meaning that clearing the errors could
-              end up being a manual task that takes dozens of minutes.
+              For older accounting software, we don't have a built in way to
+              clear errors in bulk.
               <br /><br />
               This is a chrome extension built to automatically clear sync
               errors for Quickbooks desktop in bill.com.
@@ -335,7 +336,7 @@
           <div class="column row-desktop">
             <div class="col-3-desktop column">
               <h2 class="h2 text-primary">
-                <span class="motif">W</span>ho's this bloke?
+                <span class="motif">A</span>bout me
               </h2>
               <p>
                 I'm a part-time student at Houston Community College, currently
