update hero section navigation links
also, re order projects and rewrite project descriptions

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 ><span class="motif">G</span>ombos</span
               >
             </h1>
-            <h2 class="text-light h3">Lets create together.</h2>
+            <h2 class="text-light h3">Lets work together.</h2>
             <nav>
               <a
                 href="https://github.com/MichaelGombos/"
@@ -194,15 +194,9 @@
               >
               <a
                 href="https://www.linkedin.com/in/m1ch43l/"
-                class="button"
-                target="_blank"
-                >Linkedin</a
-              >
-              <a
-                href="./assets/documents/GombosResume.pdf"
                 class="button bg-secondary"
                 target="_blank"
-                >Resume</a
+                >LinkedIn</a
               >
             </nav>
           </div>
@@ -214,7 +208,7 @@
           <h2 class="text-primary h2"><span class="motif">P</span>rojects</h2>
 
           <div class="project">
-            <h3 class="h4 bold">Quickbooks Automatic Error Remover</h3>
+            <h3 class="h4 bold">Quickbooks Bulk Error Remover</h3>
             <img
               alt="Quickbooks Automatic Error Remover project logo"
               width="615"
@@ -228,7 +222,7 @@
               unnecessary errors would pop up for accounting software after data
               tries to sync to or from bill.com.
               <br /><br />
-              For older accounting software, we don't have a built in way to
+              For older accounting software, we didn't have a built in way to
               clear errors in bulk.
               <br /><br />
               This is a chrome extension built to automatically clear sync
@@ -241,6 +235,41 @@
                 class="button"
                 target="_blank"
                 >Github</a
+              >
+            </nav>
+          </div>
+          <div class="project">
+            <h3 class="h4 bold">Carrot.com Css Tab Extender</h3>
+            <img
+              alt="Google Play Store preview of Css Tab Extender Project"
+              width="615"
+              height="305"
+              class="preview"
+              src="./assets/images/carrot-project.webp"
+            />
+            <p>
+              While working at SEO for real estate investors, I spent a lot of
+              my time inside of the carrot editor tweaking and designing web
+              pages. <br /><br />
+              The carrot.com design tab offers a CSS editor similar to
+              WordPress, but the default size is too small, and can be an
+              inconvenience to developers and designers. <br /><br />
+              I created a chrome extension to extend the height of the CSS
+              editor.
+            </p>
+
+            <nav>
+              <a
+                href="https://github.com/MichaelGombos/Carrot-CSS-Tab-Extender"
+                class="button"
+                target="_blank"
+                >Github</a
+              >
+              <a
+                href="https://chrome.google.com/webstore/detail/carrot-css-tab-extender/lgkdfebkigaodhjhbceehdilafpdallo?hl=en"
+                class="button bg-secondary"
+                target="_blank"
+                >View on chrome web store</a
               >
             </nav>
           </div>
@@ -292,13 +321,9 @@
               This is a web scraper built to automatically search and apply for
               recent job posts on indeed.com.<br /><br />
               This project contains a dashboard to control the webscraper, and a
-              server to handle storage.
+              local database to handle storage.
               <br /><br />
-              The web scraper has support for proxies, and is job board freindly
-              as the pace is throttled.
-              <br /><br />
-              This project was created for educational purposes only... I
-              promise.
+              The web scraper has support for proxies, and can bypass captchas.
             </p>
 
             <nav>
@@ -310,42 +335,6 @@
               >
             </nav>
           </div>
-
-          <div class="project">
-            <h3 class="h4 bold">Carrot.com Css Tab Extender</h3>
-            <img
-              alt="Google Play Store preview of Css Tab Extender Project"
-              width="615"
-              height="305"
-              class="preview"
-              src="./assets/images/carrot-project.webp"
-            />
-            <p>
-              While working at SEO for real estate investors, I spent a lot of
-              my time inside of the carrot editor tweaking and designing web
-              pages. <br /><br />
-              The carrot.com design tab offers a CSS editor similar to
-              WordPress, but the default size is too small, and can be an
-              inconvenience to developers and designers. <br /><br />
-              I created a chrome extension to extend the height of the CSS
-              editor.
-            </p>
-
-            <nav>
-              <a
-                href="https://github.com/MichaelGombos/Carrot-CSS-Tab-Extender"
-                class="button"
-                target="_blank"
-                >Github</a
-              >
-              <a
-                href="https://chrome.google.com/webstore/detail/carrot-css-tab-extender/lgkdfebkigaodhjhbceehdilafpdallo?hl=en"
-                class="button bg-secondary"
-                target="_blank"
-                >View on chrome web store</a
-              >
-            </nav>
-          </div>
         </div>
         <div id="about">
           <div class="column row-desktop">
@@ -354,8 +343,8 @@
                 <span class="motif">A</span>bout me
               </h2>
               <p>
-                I'm a part-time student at Houston Community College, currently
-                pursuing my Associate's degree in Computer Science.
+                I work as a Field Technician for Memorial Hermann hospital.
+                Currently, I am persuing the CompTIA Network+ certification.
               </p>
               <br />
               <p>
@@ -391,9 +380,9 @@
           <div class="row">
             <div class="column">
               <a class="link" href="#hero">Back To Top</a>
-              <a class="link" href="./assets/documents/GombosResume.pdf"
+              <!-- <a class="link" href="./assets/documents/GombosResume.pdf"
                 >Resume</a
-              >
+              > -->
               <a class="link" href="#projects">Projects</a>
               <a class="link" href="#about">About</a>
 
